--- a/transactionsApi/src/main/resources/application.properties
+++ b/transactionsApi/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-spring.application.name=Usersapi
+spring.application.name=transactionsApi
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-server.port=8080
-spring.datasource.url=jdbc:postgresql://users-postgresql:5434/usersbdd
+spring.datasource.url=jdbc:postgresql://transactions-postgresql:5432/transactionsbdd
 spring.datasource.username=rdario921
 spring.datasource.password=123456789
+server.port=8081
+userapi.url=http://users-api:8080
 #Debug
 #spring.datasource.url=jdbc:postgresql://localhost:5432/ttworkbdd
 #spring.datasource.username=admin
