--- a/transactionsApi/src/main/resources/application.properties
+++ b/transactionsApi/src/main/resources/application.properties
@@ -1,13 +1,31 @@
 spring.application.name=transactionsApi
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#BDD
 spring.datasource.url=jdbc:postgresql://transactions-postgresql:5432/transactionsbdd
 spring.datasource.username=rdario921
 spring.datasource.password=123456789
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#APIURL
 server.port=8081
 userapi.url=http://users-api:8080
+
+# Config de Swagger UI
+springdoc.swagger-ui.path=/swagger-ui.html
+#springdoc.api-docs.path=/v3/api-docs
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.operationsSorter=method
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.docExpansion=none
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.filter=true
+
 #Debug
 #spring.datasource.url=jdbc:postgresql://localhost:5432/ttworkbdd
 #spring.datasource.username=admin
