--- a/Usersapi/src/main/resources/application.properties
+++ b/Usersapi/src/main/resources/application.properties
@@ -1,13 +1,31 @@
 spring.application.name=Usersapi
+
+#PORT
+server.port=8080
+
+#BDD
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-server.port=8080
 spring.datasource.url=jdbc:postgresql://users-postgresql:5434/usersbdd
 spring.datasource.username=rdario921
 spring.datasource.password=123456789
+
+# Swagger UI
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.operationsSorter=method
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.docExpansion=none
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.filter=true
+
 #Debug
+#debug=true
 #spring.datasource.url=jdbc:postgresql://localhost:5432/ttworkbdd
 #spring.datasource.username=admin
 #spring.datasource.password=123456
